Release MurilloSkills 1.2.75 UI validation