@@ -49,7 +49,7 @@ class UltmineShapeCalculatorTest {
                 origin, UltmineShape.STAIRS, 5, 1, Direction.NORTH, new Vec3d(0.0, 0.0, -1.0));
 
         assertEquals(5, blocks.size());
-        assertEquals(new BlockPos(10, 40, 10), blocks.getFirst());
+        assertEquals(new BlockPos(10, 40, 10), blocks.get(0));
         assertEquals(new BlockPos(10, 41, 9), blocks.get(1));
         assertEquals(new BlockPos(10, 44, 6), blocks.get(4));
     }
